--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react-dom": "^18.0.11",
 		"@types/react-redux": "^7.1.25",
 		"@types/react-router-dom": "^5.3.3",
+		"file-saver": "^2.0.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
@@ -51,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/file-saver": "^2.0.5",
 		"@types/styled-components": "^5.1.26",
 		"axios": "^1.3.4",
 		"styled-components": "^5.3.9"
